Regression: Box select may not show channel rows in Animation Editors #101933

Closed
opened 2022-10-19 18:20:31 +02:00 by James Tomkinson · 13 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.65

Blender Version
Broken: master, 3.3.0, 3.2
Worked: 3.1

Caused by ba6d59a85a

Short description of error
Box select often doesn't show Channel rows in editors, although I see keys
(same for other select modes)

Exact steps for others to reproduce the error

  • add a Amature/Human(Meta)
  • add one keyframe to a bone
  • box select the bone with the keyframe, and another bone
  • will see keyframes but no channel controls in Dope Sheet, Timeline, or Graph Editor.

cap1.png

cap2.png

Channel Listings.blend

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.65 **Blender Version** Broken: master, 3.3.0, 3.2 Worked: 3.1 Caused by ba6d59a85a **Short description of error** Box select often doesn't show Channel rows in editors, although I see keys (same for other select modes) **Exact steps for others to reproduce the error** - add a Amature/Human(Meta) - add one keyframe to a bone - box select the bone with the keyframe, and another bone - will see keyframes but no channel controls in Dope Sheet, Timeline, or Graph Editor. ![cap1.png](https://archive.blender.org/developer/F13717249/cap1.png) ![cap2.png](https://archive.blender.org/developer/F13717248/cap2.png) [Channel Listings.blend](https://archive.blender.org/developer/F13717259/Channel_Listings.blend)

Added subscriber: @jamestomk

Added subscriber: @jamestomk

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks for the report. I can confirm. This looks like a regression to me.
Clicking around in the empty viewport is resetting the Active flag of rig. This was not the case in earlier versions.
If we make rig active from outliner then box select shows the channels.
Will bisect.

Thanks for the report. I can confirm. This looks like a regression to me. Clicking around in the empty viewport is resetting the `Active` flag of rig. This was not the case in earlier versions. If we make rig active from outliner then box select shows the channels. Will bisect.
Pratik Borhade changed title from Box select may not show channel rows in Animation Editors to Regression: Box select may not show channel rows in Animation Editors 2022-10-20 07:01:14 +02:00

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

Unable to bisect:

Error during build```
@lichtwerk , need your help :)
Known good and bad commits are: `fc259d4c30cb - 5035fbdd23ba`
Unable to bisect: ```ninja: error: 'C:/Users/prati/OneDrive/Desktop/BlenderOSP/lib/win64_vc15/openexr/lib/Half_s.lib', needed by 'bin/blender.exe', missing and no known rule to make it Error during build``` @lichtwerk , need your help :) Known good and bad commits are: `fc259d4c30cb - 5035fbdd23ba`

On it

On it

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Caused by ba6d59a85a

CC @ideasman42

Caused by ba6d59a85a CC @ideasman42
Philipp Oeser self-assigned this 2022-10-24 10:28:20 +02:00

Think there was just a case missing for code to set handled, fix incoming...

Think there was just a case missing for code to set `handled`, fix incoming...

This issue was referenced by c5ec667b69

This issue was referenced by c5ec667b698517fc8631e3ff2c7da01d819ae3c9

This issue was referenced by 2240ca3e7b

This issue was referenced by 2240ca3e7bbf07c1d417f288af3ab3fa2ef68df9

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101933
There is no content yet.